# PnPRANAAC

./: CMakeLists.txt  README.md
include/: ransac_estimators.h
include/pnpsolvers/: P3P_Kneip.h  P3p.h
include/theia/util/: filesystem.h
src/pnpsolvers/: P3P_Kneip.cpp  P3p.cpp
test/: data.txt  p3p_test.cpp  ransac_test.cpp
